inktrinket_v2/core.css
/* Resets ------------------------ */

*{margin: 0; padding: 0;}
*,::before,::after {box-sizing: border-box;}
a{text-decoration: none;}
a:link,a:hover,a:visited,a:invalid{color: var(--clr-darkest);}
nav ul{list-style: none;}



/* Variables ------------------------ */

:root{
    --clr-lightest: hsl(0, 100%, 100%);
    --clr-darkest: #111111;
    --clr-accent1: hsl(180, 100%, 50%);
    --clr-accent2: hsl(300, 100%, 50%);
    --clr-accent3: hsl(60, 100%, 50%);

    --clr-palette-01: hsla(0, 0%, 7%, 1);
    --clr-palette-02: hsla(253, 100%, 80%, 1);
    --clr-palette-03: hsla(151, 100%, 72%, 1);
    --clr-palette-04: hsla(36, 100%, 72%, 1);
    --clr-palette-05: hsla(8, 100%, 65%, 1);
}



/* Body ------------------------ */

body{
    position: relative;
    background-color: var(--clr-lightest);
    color: var(--clr-darkest);
    font-family: sans-serif;
}



/* Horizontal rule ------------------------ */

hr{
    border-style: solid;
    border-width: 5px;
    border-image: linear-gradient(90deg,
        var(--clr-accent1) 0%,
        var(--clr-accent2) 50%,
        var(--clr-accent3) 100%
    ) 1;
    margin: 2rem 0;
}



/* Spacing ------------------------ */

.up_margin{
    margin-top: 1.4rem;
}
.low_margin{
    margin-bottom: 1.4rem;
}
.up_margin_large{
    margin-top: 2.1rem;
}
.low_margin_large{
    margin-bottom: 2.1rem;
}



/* Site borders ------------------------ */

.site_frame{
    position: fixed;
    top: 0;
    pointer-events: none;
    width: 5dvw;
    height: 100dvh;
    background-repeat: repeat-y;
    background-size: 100% 100vh;
    animation: site_frame_flow infinite 10000ms linear;
    z-index: 0;
}
.frame_left{
    left: 0;
    background-image: url("img/flourish/border_L.png");
}
.frame_right{
    right: 0;
    background-image: url("img/flourish/border_R.png");
    background-position-x: right;
}

@keyframes site_frame_flow{
    to{
        background-position-y: 100dvh;
    }
}



/* Header & Nav  ------------------------ */

.header_flex{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 2rem;
    padding: 1.4rem 0;
}

.header_icon{
    width: 100px;
}

.header_nav_grid{
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    gap: 1.4rem;
}
.header_nav_grid li:not(:first-child){
    padding: 1.4rem;
}
.header_nav_grid a:link{
    font-family: "peridot-pe-variable", sans-serif;
    font-variation-settings: "wght" 400, "wdth" 100, "ital" 0;
    font-size: 1.4rem;
}

@media only screen and (min-width: 2500px){
    .header_nav_grid{
        gap: 1.8rem;
    }
    .header_nav_grid li:not(:first-child){
        padding: 1.8rem;
    }
    .header_nav_grid a:link{
        font-size: 1.8rem;
    }
    .header_flex{
        gap: 2.2rem;
        padding: 1.8rem 0;
    }
}




/* Night Light  ------------------------ */

#night-light{
    position: fixed;
    top: -24px;
    left: 80%;
    transform-box: fill-box;
    transform-origin: 50px 24px;
    animation: night-light-onload 1000ms ease;
    animation-fill-mode: forwards;
    transform: translateY(-116px) rotateZ(10deg);
}

@keyframes night-light-onload{
    0%{
        transform: translateY(-116px) rotateZ(10deg);
    }
    25%{
        transform: translateY(0px) rotateZ(-10deg);
    }
    55%{
        transform: translateY(0px) rotateZ(6deg);
    }
    75%{
        transform: translateY(0px) rotateZ(-4deg);
    }
    90%{
        transform: translateY(0px) rotateZ(2deg);
    }
    100%{
        transform: translateY(0px) rotateZ(0deg);
    }
}

